Fix modals layout issues with Django 3.1 (#432)

--- a/djangocms_admin_style/sass/components/_modal.scss
+++ b/djangocms_admin_style/sass/components/_modal.scss
@@ -271,4 +271,11 @@
     &.change-list #changelist.cms-pagetree-root {
         margin-top: 40px;
     }
+    #nav-sidebar,
+    .toggle-nav-sidebar {
+        display: none;
+    }
+    .main.shifted .content {
+        max-width: 100% !important;
+    }
 }
